# script.elementum.jackett

./: .gitattributes  .gitignore  LICENSE  Makefile  Pipfile  README.md  addon.xml  jackett.py  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
resources/: settings.xml
resources/language/: messages.pot
resources/language/English/: strings.po
scripts/: changelog.sh  update-version.py  xgettext.sh  xgettext_merge.sh
src/: addon.py  client.py  debugger.py  filter.py  jackett.py  logger.py  main.py  pdialoghelper.py  torrent.py  utils.py
