[tool.poetry]
name = "script.elementum.jackett"
version = "0.0.1"
description = ""
authors = ["fugkco <fugkco@users.noreply.github.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.9.5"
torf = "^4.2.0"
aiohttp = "^3.8.6"

[tool.poetry.group.dev.dependencies]
kodistubs = "^19.0.0"
flake8 = "^6.0.0"
pytest = "^7.3.0"
kodi-six = {git = "https://github.com/romanvm/kodi.six.git", rev = "0.1.3"}
elementum = { git = "https://github.com/fugkco/plugin.video.elementum.git" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
